--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vitmind-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta
+      name="description"
+      content="VIT Mind - Your Mental Wellbeing Matters at VIT" />
+    <meta name="author" content="VIT Mind" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="VIT Mind" />
+    <meta
+      property="og:description"
+      content="VIT Mind - Your Mental Wellbeing Matters at VIT" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://i.ibb.co/rKnhxhYH/image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@VIT_mind" />
+    <meta name="twitter:image" content="https://i.ibb.co/rKnhxhYH/image.png" />
   </head>
 
   <body>
@@ -24,3 +28,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
